# seatbelt-x

./: CMakeLists.txt  LICENSE  README.md  dependencies.cmake  project_options.cmake  test.bs  vcpkg.json
.github/workflows/: ci.yml
cmake/: system_link.cmake  warnings.cmake
src/: CMakeLists.txt
src/sandbox/: CMakeLists.txt  main.cpp
src/seatbelt/: CMakeLists.txt  executor.hpp  interpreter_error.hpp  lexer.cpp  lexer.hpp  lexer_error.hpp  ostream_formatter.hpp  parser.cpp  parser.hpp  parser_error.hpp  seatbelt.cpp  source_location.hpp  tokens.cpp  tokens.hpp  types.hpp  utils.cpp  utils.hpp
src/seatbelt/compiler/: compiler.cpp  compiler.hpp  context.hpp  data_type.hpp  function_call.cpp  function_call.hpp  function_declaration.hpp  function_declaration_reference.cpp  function_declaration_reference.hpp  string_constant.hpp  string_constant_reference.hpp  u32_constant.hpp  value.hpp
src/seatbelt/expressions/: expression.hpp  string_literal.cpp  string_literal.hpp  u32_literal.hpp
src/seatbelt/include/: seatbelt.hpp
src/seatbelt/interpreter/: interpreter.cpp  interpreter.hpp
src/seatbelt/statements/: print.hpp  println.hpp  statement.hpp
test/: CMakeLists.txt  test_interpreter.cpp
